@@ -1,4 +1,4 @@
-#US Locale Information for Pooka
+#English Locale Information for Pooka
 
 Title=Pooka
 Title.withNewMessages=* Pooka *
@@ -278,11 +278,11 @@ ConnectionMonitor.popupMenu.Connect.Label=Connect
 ConnectionMonitor.popupMenu.Disconnect.Label=Disconnect
 ConnectionMonitor.popupMenu.Unavailable.Label=Mark as Unavailable
 
-DateFormat=EEE, MMM dd, yyyy, HH:mm
+DateFormat=EEE, dd MMM, yyyy, HH:mm
 FolderTable.MsgNumber.Label=Number
 FolderTable.TodayDateFormat=HH:mm
 FolderTable.ThisWeekDateFormat=EEE HH:mm
-FolderTable.DefaultDateFormat=MM/dd/yy HH:mm
+FolderTable.DefaultDateFormat=dd/MM/yy HH:mm
 
 NewMessage.customHeaders.header=Header
 NewMessage.customHeaders.value=Value
@@ -746,7 +746,7 @@ NewMessageCryptoPanel.clearButton.label=Clear Key
 
 Pooka.cache.errorCachingMessage=Error caching message
 
-Search.dateFormat=MM/dd/yyyy
+Search.dateFormat=dd/MM/yyyy
 error.search.invalidDateFormat=Invalid date format:  
 error.serach.generatingSearchTerm=Error generating SearchTerm:  
 
