@@ -1,0 +1,7 @@
+#US Locale Information for Pooka
+#Note that these are US-specific; general English configuration should
+#go in Pooka_en.properties.
+
+DateFormat=EEE, MMM dd, yyyy, HH:mm
+FolderTable.DefaultDateFormat=MM/dd/yy HH:mm
+Search.dateFormat=MM/dd/yyyy
