@@ -538,7 +538,7 @@ public class FolderDisplayPanel extends JPanel {
       try {
 
 	//if ((removedProxies != null && removedProxies.contains(mp)) || mp.getMessageInfo().getFlags().contains(Flags.Flag.DELETED) || (unread && mp.getMessageInfo().getFlags().contains(Flags.Flag.SEEN))) {
-	if ((removedProxies != null && removedProxies.contains(mp)) || mp.isDeleted() || (unread && !mp.isUnread())) {
+	if ((removedProxies != null && removedProxies.contains(mp)) || mp.isDeleted() || (unread && mp.isSeen())) {
 	  newRow ++;
 	} else {
 	  done = true;
@@ -613,7 +613,7 @@ public class FolderDisplayPanel extends JPanel {
       MessageProxy mp = getFolderInfo().getMessageProxy(newRow);
       try {
 	//if ((removedProxies != null && removedProxies.contains(mp)) || mp.getMessageInfo().getFlags().contains(Flags.Flag.DELETED) || (unread && mp.getMessageInfo().getFlags().contains(Flags.Flag.SEEN))) {
-	if ((removedProxies != null && removedProxies.contains(mp)) || mp.isDeleted() || (unread && !mp.isUnread())) {
+	if ((removedProxies != null && removedProxies.contains(mp)) || mp.isDeleted() || (unread && mp.isSeen())) {
 	  newRow--;
 	} else {
 	  done = true;
