@@ -1,49 +1,3 @@
-*) bug:  jdk1.5 close window doesn't call exit, rather just quits.
-
-*) bug:  on AWT-EventQueue:
-	*) test.  put debug statement in getFlags() to print a warning
-		if we're not on the right thread.
-	*) also, add null display action for matchees on deleted.
-	*) decouple isDeleted() and isUnread() from filters.
-"AWT-EventQueue-0" prio=1 tid=0x083fef60 nid=0x1047 waiting for monitor entry [0x467c0000..0x467c1840]
-        at com.sun.mail.imap.IMAPFolder.getMessageByUID(IMAPFolder.java:1484)
-	- waiting to lock <0x6253c3f0> (a com.sun.mail.imap.IMAPFolder)
-	at net.suberic.pooka.UIDFolderInfo.getRealMessageById(UIDFolderInfo.java:624)
-	at net.suberic.pooka.UIDMimeMessage.getMessage(UIDMimeMessage.java:571)
-        at net.suberic.pooka.UIDMimeMessage.getFlags(UIDMimeMessage.java:408)
-        - locked <0x62c28968> (a net.suberic.pooka.UIDMimeMessage)
-        at net.suberic.pooka.MessageInfo.getFlags(MessageInfo.java:136)
-        at net.suberic.pooka.gui.FolderDisplayPanel.getNextSelectableMessage(FolderDisplayPanel.java:540)
-        at net.suberic.pooka.gui.FolderDisplayPanel.getNextSelectableMessage(FolderDisplayPanel.java:520)
-        at net.suberic.pooka.gui.FolderDisplayPanel.selectNextMessage(FolderDisplayPanel.java:493)
-        at net.suberic.pooka.gui.FolderInternalFrame.selectNextMessage(FolderInternalFrame.java:363)
-        at net.suberic.pooka.gui.FolderDisplayPanel$8.actionPerformed(FolderDisplayPanel.java:406)
-        at javax.swing.JComponent$ActionStandin.actionPerformed(JComponent.java:3194)
-        at javax.swing.SwingUtilities.notifyAction(SwingUtilities.java:1571)
-        at javax.swing.JComponent.processKeyBinding(JComponent.java:2730)
-        at javax.swing.JTable.processKeyBinding(JTable.java:3458)
-        at javax.swing.JComponent.processKeyBindings(JComponent.java:2765)
-        at javax.swing.JComponent.processKeyEvent(JComponent.java:2693)
-        at java.awt.Component.processEvent(Component.java:5265)
-        at java.awt.Container.processEvent(Container.java:1966)
-        at java.awt.Component.dispatchEventImpl(Component.java:3955)
-        at java.awt.Container.dispatchEventImpl(Container.java:2024)
-        at java.awt.Component.dispatchEvent(Component.java:3803)
-        at java.awt.KeyboardFocusManager.redispatchEvent(KeyboardFocusManager.java:1810)
-        at java.awt.DefaultKeyboardFocusManager.dispatchKeyEvent(DefaultKeyboardFocusManager.java:668)
-        at java.awt.DefaultKeyboardFocusManager.preDispatchKeyEvent(DefaultKeyboardFocusManager.java:916)
-        at java.awt.DefaultKeyboardFocusManager.typeAheadAssertions(DefaultKeyboardFocusManager.java:794)
-        at java.awt.DefaultKeyboardFocusManager.dispatchEvent(DefaultKeyboardFocusManager.java:632)
-        at java.awt.Component.dispatchEventImpl(Component.java:3841)
-        at java.awt.Container.dispatchEventImpl(Container.java:2024)
-        at java.awt.Window.dispatchEventImpl(Window.java:1766)
-        at java.awt.Component.dispatchEvent(Component.java:3803)
-        at java.awt.EventQueue.dispatchEvent(EventQueue.java:463)
-        at java.awt.EventDispatchThread.pumpOneEventForHierarchy(EventDispatchThread.java:234)
-        at java.awt.EventDispatchThread.pumpEventsForHierarchy(EventDispatchThread.java:163)
-        at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:157)        at java.awt.EventDispatchThread.pumpEvents(EventDispatchThread.java:149)        at java.awt.EventDispatchThread.run(EventDispatchThread.java:110)
-
-
 *) ?? add support for ocean theme in jdk 1.5 ??
 
 *) modify date format so that it only defaults to MM/dd/yy in the US.
